<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_remote_port"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etRemoteIP"
        app:layout_constraintEnd_toStartOf="@+id/etRemotePort"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etRemoteIP"
        app:layout_constraintTop_toTopOf="@+id/etRemoteIP" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/main_activity_local_receive_port"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etLocalPort"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSendText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_activity_remote_ip"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etRemoteIP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRemoteIP"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/main_activity_default_ip"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etRemotePort"
        android:layout_width="99dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/main_activity_default_port"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etLocalPort"
        android:layout_width="99dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/main_activity_default_port"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etSendText"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="bottom|start"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.7"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etReceiveText"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/etSendText"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent="0.7"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_send"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etSendText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSendText" />

    <Button
        android:id="@+id/buttonClearReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etReceiveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etReceiveText" />

    <Switch
        android:id="@+id/switchUdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_activity_type_udp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switchTcp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReceiveText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchTcp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_type_tcp_client"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchUdp"
        app:layout_constraintEnd_toStartOf="@+id/switchTcpServer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switchUdp"
        app:layout_constraintTop_toTopOf="@+id/switchUdp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchTcpServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_type_tcp_server"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchTcp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switchTcp"
        app:layout_constraintTop_toTopOf="@+id/switchTcp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ToggleButton
        android:id="@+id/toggleButtonStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_start_service"
        android:textOff="@string/main_activity_service_not_start"
        android:textOn="@string/main_activity_service_running"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/switchTcpServer"
        app:layout_constraintTop_toBottomOf="@+id/switchTcpServer" />

</androidx.constraintlayout.widget.ConstraintLayout>